Add Database Configurations

--- a/LegalPlatform.API/appsettings.json
+++ b/LegalPlatform.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ConnectionString": "Server=DESKTOP-UFQ365U\\SQLEXPRESS;Database=LegalPlatform;Integrated Security=true;TrustServerCertificate = true;"
+  }
 }
