--- a/LegalPlatform.Service/LegalPlatform.Service.csproj
+++ b/LegalPlatform.Service/LegalPlatform.Service.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="UnitOfWork\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LegalPlatform.Infrastructure\LegalPlatform.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
