--- a/LegalPlatform.Core/LegalPlatform.Core.csproj
+++ b/LegalPlatform.Core/LegalPlatform.Core.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Articale\Command\Validations\" />
     <Folder Include="Features\Authentications\Command\Validations\" />
     <Folder Include="Features\Authorization\Command\Validations\" />
     <Folder Include="Features\Authorization\Query\" />
