--- a/LegalPlatform.API/appsettings.json
+++ b/LegalPlatform.API/appsettings.json
@@ -9,5 +9,19 @@
 
   "ConnectionStrings": {
     "ConnectionString": "Server=DESKTOP-UFQ365U\\SQLEXPRESS;Database=LegalPlatform;Integrated Security=true;TrustServerCertificate = true;"
+  },
+  "SMTP": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "yarapharpyaa55@gmail.com",
+    "Password": "zlia vgls awuf aizb"
+  },
+
+  "JWT": {
+    "Key": "Ahmed-Salah-Mansour-Computer-And-Information-BackEnd-Developer",
+    "Issuer": "https://localhost:7083/",
+    "Audience": "https://localhost:7083/",
+    "Expire": "30"
+
   }
 }
