Add Comment Module

--- a/LegalPlatform.API/appsettings.json
+++ b/LegalPlatform.API/appsettings.json
@@ -13,8 +13,8 @@
   "SMTP": {
     "Server": "smtp.gmail.com",
     "Port": 587,
-    "Username": "yarapharpyaa55@gmail.com",
-    "Password": "zlia vgls awuf aizb"
+    "Username": "legalplatform3@gmail.com",
+    "Password": "mqpe vnbx gtnb xmiq"
   },
 
   "JWT": {
