Create-Payment-Functionallity

--- a/LegalPlatform.API/LegalPlatform.API.csproj
+++ b/LegalPlatform.API/LegalPlatform.API.csproj
@@ -14,11 +14,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LegalPlatform.Core\LegalPlatform.Core.csproj" />
     <ProjectReference Include="..\LegalPlatform.Infrastructure\LegalPlatform.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DataSeed\" />
   </ItemGroup>
 
 </Project>
