--- a/LegalPlatform.MVC/appsettings.json
+++ b/LegalPlatform.MVC/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=DESKTOP-UFQ365U\\SQLEXPRESS;Database=LegalPlatform;Integrated Security=true;TrustServerCertificate = true;"
+  },
+  "SMTP": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "legalplatform3@gmail.com",
+    "Password": "mqpe vnbx gtnb xmiq"
+  },
+
+  "JWT": {
+    "Key": "Ahmed-Salah-Mansour-Computer-And-Information-BackEnd-Developer",
+    "Issuer": "https://localhost:7083/",
+    "Audience": "https://localhost:7083/",
+    "Expire": "30"
+  }
 }
